--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 
 		<dependency>
 			<groupId>io.rest-assured</groupId>
-			<artifactId>rest-assured</artifactId>
-			<version>4.3.2</version>
+			<artifactId>spring-mock-mvc</artifactId>
+			<version>3.3.0</version>
 			<scope>test</scope>
 		</dependency>
     </dependencies>
